perf(sql): batch authorized system table rows